# allianceauth-translate-tool

./: .coveragerc  MANIFEST.in  README.md  pyproject.toml
aatranslate/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  language_cog.py  models.py  providers.py  urls.py
aatranslate/tests/: test_models.py
tests/: test_settings.py
